--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "hls/nginx-rtmp-module"]
 	path = hls/nginx-rtmp-module
 	url = https://github.com/arut/nginx-rtmp-module
+[submodule "tcp-webm/picohttpparser"]
+	path = tcp-webm/picohttpparser
+	url = https://github.com/h2o/picohttpparser
