Add a webm broadcaster application.
Clients can connect in the middle of the stream and the server
will send them a cached copy of the metadata, and even skip
frames until a keyframe is received. So a curl|ffmpeg pipe
can read the broadcasted data!

--- a/tcp-webm/Makefile
+++ b/tcp-webm/Makefile
@@ -1,10 +1,25 @@
+CC ?= gcc
 CXX ?= g++
+CFLAGS ?= -O3
 CXXFLAGS ?= -O3
 
 
-all: obj/tcpdump obj/webmdump
+.PHONY: all
+.PRECIOUS: obj/%
 
 
-obj/%: src/%.cc lib/io.h lib/io-main.h
+all: obj/tcpdump obj/webmdump obj/webmclone
+
+
+obj/%: src/%.cc lib/io.h lib/io-main.h lib/ebml.h obj/picohttpparser.o
 	@mkdir -p obj
-	$(CXX) $(CXXFLAGS) -std=c++11 -Wall -Wextra -Werror -I./lib -pthread $< -o $@
+	$(CXX) $(CXXFLAGS) -std=c++11 -Wall -Wextra -Werror -I./picohttpparser -I./lib -pthread $< -o $@ obj/picohttpparser.o
+
+
+obj/picohttpparser.o: picohttpparser/.git
+	@mkdir -p obj
+	$(CC) $(CFLAGS) -std=c11 -Wall -Wextra -Werror -I./picohttpparser picohttpparser/picohttpparser.c -o $@ -c
+
+
+picohttpparser/.git: ../.gitmodules
+	git sumodule update --init picohttpparser
