http-webm: sort everything into directories.

--- a/http-webm/Makefile
+++ b/http-webm/Makefile
@@ -1,26 +1,24 @@
-AR ?= ar
-CXX ?= g++
+AR       ?= ar
+PYTHON   ?= python
+CXX      ?= g++
 CXXFLAGS ?= -O3
 
 
-.PHONY: all clean
+.PHONY: python clean
 
 
-all: broadcast_ffi.o
-
-
-clean:
-	rm -rf obj broadcast_ffi.*
-
-
-broadcast_ffi.o: obj/libbroadcast.a
-	python broadcast_ffi_gen.py
-
-
-obj/%.o: %.cc %.h
-	@mkdir -p obj
-	$(CXX) $(CXXFLAGS) -std=c++11 -Wall -Wextra -Werror -fPIC $< -c -o $@
+python: obj/libbroadcast.a
+	$(PYTHON) mkffi.py
 
 
 obj/libbroadcast.a: obj/broadcast.o
 	$(AR) rcs $@ $<
+
+
+obj/%.o: src/%.cc src/%.h
+	@mkdir -p obj
+	$(CXX) $(CXXFLAGS) -std=c++11 -Wall -Wextra -Werror -fPIC $< -c -o $@
+
+
+clean:
+	rm -rf obj build
